--- a/peer/staticfiles/css/listings.css
+++ b/peer/staticfiles/css/listings.css
@@ -178,7 +178,7 @@ table.orderable-initalized .order-cell, body>tr>td.order-cell {
     z-index: 1000;
     width: 160px;
     border-left: 1px solid #ddd;
-    background: #efefef;
+    background: #ffffff;
     margin: 0px;
     padding-right: 51px;
     margin-right: 12px;
