--- a/peer/entity/templates/entity/view.html
+++ b/peer/entity/templates/entity/view.html
@@ -146,7 +146,10 @@
           <tbody>
           {% for certificate in entity.certificates %}
           <tr>
-            <td><pre>{{ certificate.text|letterwrap:64 }}</pre></td>
+            <td>
+              <pre class="certificate">{{ certificate.text|truncatechars:9 }}</pre>
+              <pre class="certificate" style="display:none" >{{ certificate.text|letterwrap:64 }}</pre>
+            </td>
             <td>{% trans "Used for" %} {{ certificate.use }}</td>
           </tr>
           {% endfor %}
@@ -217,6 +220,7 @@
 {% endblock %}
 
 {% block extrajs %}
+  <script type="text/javascript" src="{{ STATIC_URL }}js/toggle_data.js"></script>
   {% if entity.has_metadata %}
   <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.entitymd.js"></script>
   {% if entity.geolocationhint %}
