CSS of md-editor

--- a/peer/entity/templates/entity/simple_edit_metadata.html
+++ b/peer/entity/templates/entity/simple_edit_metadata.html
@@ -26,7 +26,7 @@
     {% endfor %}
   </fieldset>
 
-  <fieldset class="actionRow">
+  <fieldset class="actionRowMD">
       {% if MODERATION_ENABLED %}
             {% canedit entity %}
     <input class="button" name="submit_changes" type="submit" value="Submit changes for moderation" />
