Changes metadata editor Css

--- a/peer/staticfiles/css/layout.css
+++ b/peer/staticfiles/css/layout.css
@@ -991,3 +991,11 @@ input.ui-autocomplete-input {
 .metadataForm {
     margin-bottom: 0px;
 }
+
+.rowMD {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    margin-bottom: 0;
+}
