--- a/peer/entity/templates/entity/sharing.html
+++ b/peer/entity/templates/entity/sharing.html
@@ -5,8 +5,11 @@
 {% block extracss %}
 {% endblock %}
 
-{% block content %}
+{% block extra_menu %}
 {% include "entity/menu.html" %}
+{% endblock %}
+
+{% block content %}
 <section class="mainContent">
 
   <hgroup>
