fix layout broken by navigation menu, #89

--- a/peer/account/templates/account/menu.html
+++ b/peer/account/templates/account/menu.html
@@ -1,6 +1,6 @@
 {% load i18n session %}
 
-    <ul>
+    <ul class="nav-menu">
       <li><a href="{% url 'account_profile' %}">{% trans "Domains" %}</a></li>
       <li><a href="{% url 'domain_add' %}">{% trans "Add domain" %}</a></li>
       <li><a href="{% url 'entities:entities_list' %}">{% trans "Entities" %}</a></li>
