--- a/peer/entity/templates/entity/list.html
+++ b/peer/entity/templates/entity/list.html
@@ -2,14 +2,16 @@
 
 {% load i18n %}
 
+{% block extra_menu %}
+  {% include "entity/listing.include.html" %}
+{% endblock %}
+
 {% block content %}
   <hgroup>
     <h1>{% trans "Entities list" %}</h1>
   </hgroup>
 
   <a class="button" href="{% url 'entities:entity_add' %}">{% trans "Add entity" %}</a>
-
-  {% include "entity/listing.include.html" %}
 
   {% if entities.has_geoinfo %}
   <div class="map"></div>
