--- a/peer/entity/templates/entity/menu.html
+++ b/peer/entity/templates/entity/menu.html
@@ -1,6 +1,6 @@
 {% load i18n entity_permissions split_strings %}
 
-    <ul>
+    <ul class="nav-menu">
       {% canedit entity %}
       {% if request.path|get_path != 'view' and request.path|get_path != 'detail' %}
         <li><a href="{% url 'entities:entity_view' entity.id %}">{% trans "Entity Details" %}</a></li>
