--- a/peer/templates/base.html
+++ b/peer/templates/base.html
@@ -95,8 +95,10 @@
         </nav>
       {% endif %}
     {% endblock %}
-    {% block content %}
-    {% endblock %}
+      <div id="content" class="">
+      {% block content %}
+      {% endblock %}
+      </div>
     </section>
 
     <footer>
