bug getting the orgs

--- a/peer/entity/templates/entity/view.html
+++ b/peer/entity/templates/entity/view.html
@@ -122,7 +122,7 @@
 
       {% if entity.organization %}
       <!-- Bold label -->
-      <dt>{% trans "Organization" %} {{ l10n_org.lang }}</dt>
+      <dt>{% trans "Organization" %}</dt>
       <dd>
         <table>
           <tbody>
