--- a/peer/entity/templates/entity/edit_metadata.html
+++ b/peer/entity/templates/entity/edit_metadata.html
@@ -43,7 +43,7 @@
 
 {% block extrajs %}
 {% if needs_google_maps %}
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+<script type="text/javascript" src="https://maps.google.com/maps/api/js?key={{ GOOGLE_MAPS_API_KEY }}"></script>
 {% endif %}
 
 <script type="text/javascript" src="{{ STATIC_URL }}js/require-2.1.18.min.js" data-main="{{ STATIC_URL }}saml-metadata-editor/js/main"></script>
