--- a/peer/entity/templates/entity/map.include.html
+++ b/peer/entity/templates/entity/map.include.html
@@ -1,5 +1,5 @@
   {% if entities.has_geoinfo %}
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?key={{ GOOGLE_MAPS_API_KEY }}"></script>
   <script type="text/javascript">
   (function ($) {
       $(document).ready(function () {
