--- a/peer/entity/templates/entity/view.html
+++ b/peer/entity/templates/entity/view.html
@@ -229,7 +229,7 @@
   {% if entity.has_metadata %}
   <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.entitymd.js"></script>
   {% if entity.geolocationhint %}
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?key={{ GOOGLE_MAPS_API_KEY }}"></script>
   {% endif %}
 
   <script type="text/javascript">
