modify footer contents

--- a/peer/templates/base.html
+++ b/peer/templates/base.html
@@ -104,8 +104,7 @@
     <footer>
       <ul>
         <li><a href="{% url 'general_conditions' %}">{% trans "General conditions" %}</a></li>
-        <li><a href="#">Terena PEER 2011</a></li>
-        <li><a href="{% url 'explanation' %}">{% trans "Who can do what?" %}</a></li>
+        <li><a href="{% url 'explanation' %}">{% trans "FAQ" %}</a></li>
       </ul>
     </footer>
 
