--- a/peer/templates/registration/login.html
+++ b/peer/templates/registration/login.html
@@ -30,7 +30,11 @@
   {% if SAML_ENABLED %}
   {% load idplist mailtoadmins %}
 
+  {% if settings.LOCAL_LOGIN_ENABLED %}
   <div class="right block">
+  {% else %}
+  <div class="left block">
+  {% endif %}
     <h2>{% trans "Federated sign in" %}</h2>
     <form id="federated-login" action="{% url 'saml2_login' %}" method="get">{% csrf_token %}
       {% idplist as idps %}
