Configuration parameter to disable local logins

--- a/peer/templates/registration/login.html
+++ b/peer/templates/registration/login.html
@@ -7,6 +7,7 @@
     <h1>{% trans "Sign in" %}</h1>
   </hgroup>
 
+  {% if settings.LOCAL_LOGIN_ENABLED %}
   <div class="left block">
     <h2>{% trans "Local sign in" %}</h2>
     <form id="sing-in-from" action="." method="post">{% csrf_token %}
@@ -24,10 +25,16 @@
     </p>
   </div>
 
+  {% endif %}
+
   {% if SAML_ENABLED %}
   {% load idplist mailtoadmins %}
 
+  {% if settings.LOCAL_LOGIN_ENABLED %}
   <div class="right block">
+  {% else %}
+  <div class="left block">
+  {% endif %}
     <h2>{% trans "Federated sign in" %}</h2>
     <form id="federated-login" action="{% url 'saml2_login' %}" method="get">{% csrf_token %}
       {% idplist as idps %}
@@ -72,9 +79,11 @@
       </fieldset>
     </form>
   </div>
-
   {% endif %}
+
+  {% if settings.LOCAL_LOGIN_ENABLED %}
   <div class="centerText clear">
     <a class="button" href="{% url 'registration_register' %}">{% trans "Sign up" %}</a>
   </div>
+  {% endif %}
 {% endblock %}
