--- a/peer/entity/templates/entity/menu.html
+++ b/peer/entity/templates/entity/menu.html
@@ -19,6 +19,7 @@
       {% if entity.is_metarefreshable %}
         <li><a href="{% url 'entities:metarefresh_edit' entity.id %}">{% trans "Metarefresh" %}</a></li>
       {% endif %}
+      <li><a href="{% url 'entities:manage_categories' entity.id %}">{% trans "Manage Categories" %}</a></li>
       {% endcanedit %}
       {% if request.path|get_path != 'monitoring_prefs' %}
         <li><a href="{% url 'entities:monitoring_prefs' entity.id %}">{% trans "Monitor endpoints" %}</a></li>
