--- a/peer/entity/templates/entity/manage_idp_categories.html
+++ b/peer/entity/templates/entity/manage_idp_categories.html
@@ -9,11 +9,11 @@
 {% block content %}
 <section class="mainContent">
   <hgroup>
-    <h1>{% trans "Manage Categories" %}</h1>
+    <h1>{% trans "Manage IdP Categories" %}</h1>
     <h2>{{ entity }}</h2>
   </hgroup>
 
-    <form action="{% url 'entities:manage_categories' entity.id %}" method="post">{% csrf_token %}
+    <form action="{% url 'entities:manage_idp_categories' entity.id %}" method="post">{% csrf_token %}
       <fieldset>
       {{ form.as_p }}
       </fieldset>
@@ -31,30 +31,13 @@
       (function ($) {
           $(document).ready(function () {
               $('#id_coc_priv_statement_url').parent().css('margin-left', '20px');
-              $('#id_rae_hei_service').parent().css('margin-left', '20px');
-              $('#id_rae_nren_service').parent().css('margin-left', '20px');
-              $('#id_rae_eu_protection').parent().css('margin-left', '20px');
               $('#id_security_contact_email').parent().css('margin-left', '20px');
               if ($('#id_coc_priv_statement_url').val() === '') {
                   $('#id_coc_priv_statement_url').parent().css('margin-left', '20px').hide();
               }
-              if ($('#id_rae_hei_service').val() === false) {
-                  $('#id_rae_hei_service').parent().css('margin-left', '20px').hide();
-              }
-              if ($('#id_rae_nren_service').val() === false) {
-                  $('#id_rae_nren_service').parent().css('margin-left', '20px').hide();
-              }
-              if ($('#id_rae_eu_protection').val() === false) {
-                  $('#id_rae_eu_protection').parent().css('margin-left', '20px').hide();
-              }
               if ($('#id_security_contact_email').val() === '') {
                   $('#id_security_contact_email').parent().css('margin-left', '20px').hide();
               }
-              $('#id_research_and_education').click(function (e) {
-                  $('#id_rae_hei_service').parent().show(e.target.checked);
-                  $('#id_rae_nren_service').parent().show(e.target.checked);
-                  $('#id_rae_eu_protection').parent().show(e.target.checked);
-              });
               $('#id_code_of_conduct').click(function (e) {
                   $('#id_coc_priv_statement_url').parent().show(e.target.checked);
               });
